The grid shows correctly now Fixed issue where pixels where not fitting inside th econtainer

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
 .container {
     margin: 0;
     padding: 0;
-    border: 1px solid rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
     width: 500px;
@@ -20,7 +19,7 @@ body {
     padding: 0;
     color: black;
     border: 1px solid black;
-   
+    box-sizing: border-box;
 }
 
 
